platformsupport/scenes/opengl: don't release egl resources from the thread

AbstractEglBackend::cleanup is called by implementations of the class before the destructor
runs, which means that m_dmaBuf gets destroyed after EGL was cleaned up, which can cause crashes

BUG: 466174